Reworked lexicon: - gwsetup: translations in lexicon.txt - cleaned lexicon.txt - gwsetup: translate_nth delimiter '/' -> '|' (allow html in lexicon)

--- a/bin/setup/lang/backg.htm
+++ b/bin/setup/lang/backg.htm
@@ -7,16 +7,8 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Hintergrundbild
-en: Background image
-es: Imagen de fondo
-fi: Taustakuva
-fr: Image de fond
-it: Immagine di fondo
-lv: Fona attçls
-sv: Bakgrundsbild
-]</title>
+  <title>[Background image]
+</title>
 %fsetup.css;
 </head>
 
@@ -24,88 +16,28 @@ sv: Bakgrundsbild
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Hintergrundbild
-en: Background image
-es: Imagen de fondo
-fi: Taustakuva
-fr: Fond d’écran
-it: Fondo dello schermo
-lv: Fona attçls
-sv: Bakgrundsbild
-]
+[Background image]
 </h1>
 </div>
 
 <ul>
 
 <li>
-[
-de: Um ein <b>Hintergrundbild</b> für die Datenbank "%o" anzugeben,
-    gib hier den Dateinamen des Bildes ein:
-en: To specify a background image for the database "%o", you have to
-    write it:
-es: Para utilizar una imagen de fondo en la base "%o", hay que meterla 
-    bajo la forma:
-fi: Määritelläksesi taustakuvan tietokannalle "%o", sinun pitää kirjoittaa se:
-fr: Pour <b>indiquer une image de fond</b> pour la base "%o", il faut la
-    mettre sous la forme suivante:
-it: Per <b>indicare un'immagine di fondo</b> per la base "%o",
-    bisogna farlo nella forma seguente:
-lv: Lai noteiktu fona attçlu datu bâzei "%o", jums jâuzraksta tas
-    (aizvietojot "<tt>foo.jpg</tt>" jûsu attçla datnes reâlo nosaukumu):
-sv: För att specifiera en bakgrundsbild för databasen "%o", måste du
-    skriva (byt ut "<tt>foo.jpg</tt>" mot det riktiga namnet för bildfilen):
-]
+[To specify a background image for the database "%o", you have to write it:]
 
 <pre>
-     background="gwd%t{.exe}?m=IM;v=/[
-de: bla.jpg
-en: foo.jpg
-es: toto.jpg
-fi: esimerkki.jpg
-fr: toto.jpg
-it: pippo.jpg
-lv: foo.jpg
-sv: foo.jpg
-]"
+     background="gwd%t{.exe}?m=IM;v=/[foo.jpg]
+"
 </pre>
 
 <p />
 
-[
-de: Ersetze dabei "<tt>bla.jpg</tt>" durch den echten Bildnamen.
-en: replacing "<tt>foo.jpg</tt>" by the real name of your image file.
-es: remplazando para ello "<tt>toto.jpg</tt>" por el  
-    verdadero nombre de la imagen.
-fi: korvaa "<tt>esimerkki.jpg</tt>" oikealla kuvalla.
-fr: en remplaçant "<tt>toto.jpg</tt>" par le vrai
-    nom de votre fichier image.
-it: rimpiazzando "<tt>pippo.jpg</tt>" col vero
-    nome del vostro file immagine.
-]
+[replacing "<tt>foo.jpg</tt>" by the real name of your image file.]
 
 <p />
 
 <li>
-[
-de: Lege die Bilddatei in folgendem Verzeichnis ab
-    (Gegebenenfalls lege das Verzeichnis vorher an):
-en: Put the image file in the directory
-    (possibly create it before):
-es: Meta ese fichero imagen en la carpeta
-    (que Ud. creará eventualmente):
-fi: Laita kuva hakemistoon
-    (mahdollisesti luo hakemisto):
-fr: Mettez ce fichier image dans le répertoire
-    (que vous devrez éventuellement créer):
-it: Mettete questo file immagine nella directory
-    (che dovrete eventualmente creare):
-lv: Ielieciet attçla datni katalogâ
-    (iespçjams to pirms tam izveidojot):
-sv: Lägg bildfilen i katalogen
-    (om den inte finns skapa den först):
-]
+[Put the image file in the directory (possibly create it before):]
 
 <pre>
      gw%/images
