--- a/bin/setup/lang/bsi_err.htm
+++ b/bin/setup/lang/bsi_err.htm
@@ -7,108 +7,37 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[error]</title>
+  <title>[error]
+</title>
 %fsetup.css;
 </head>
 
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;"><font color=red>[error]</font></h1>
+<h1 style="margin:0;"><font color=red>[error]
+</font></h1>
 </div>
-
-
-[
-de: Das Kommando "%d" hat beim Beenden einen Fehler geliefert.
-    Die Operation wurde möglicherweise nicht durchgeführt.
-en: The command "%d" exited with an error code. This operation may have not
-    been done.
-es: El comado "%d" ha terminado con un código de error. Es posible
-    que esta operación no haya podido efectuarse.
-fi: Komento "%d" keskeytyi virheeseen. Toimintoa ei välttämättä viety
-    loppuun asti.
-fr: La commande "%d" s’est terminée avec un code d’erreur. Il se
-    peut que cette opération n’ait pas pu être faite.
-it: Il comando "%d"si è terminato con un codice d'errore.
-    Forse l'operazione non è stata portata a termine.
-lv: Komanda "%d" beidza savu adrbu ar kïudas kodue. Iespçjams, ka ðî
-    darbîba nav veikta.
-sv: Kommandot "%d" avslutades med en felkod. Operationen kanske inte
-    har blivit utförd.
-]
-
-<p />
-
-[
-de: Hier sind die Trace-Ausgaben des Kommandos, vielleicht kannst du
-    die Erklärung für das Problem erkennen:
-en: Here are the traces of the command, maybe you can find an explanation:
-es: Los indicios dejados por el comando son las siguientes, pueda ser que Ud. 
-    encuentre allí una explicación:
-fi: Tässä on komennon jäljitys, ehkä löydät selityksen:
-fr: Voici les traces de la commande, peut-être y trouverez-vous une
-    explication:
-it: Ecco le tracce del comando; forse vi troverete una spiegazione:
-lv: Ðeit ir programmas darbîbas pçdas, iespçjams, ka Jûs varat atrast
-    izskaidrojumu:
-sv: Här är utskriften från kommandot, kanske du kan finna en förklaring:
-]
-
-<p />
-
+[The command "%d" exited with an error code. This operation may have not been done.]
+<p>
+[Here are the traces of the command, maybe you can find an explanation][:]
+<p>
 <dl><dt><dd>
 <pre>
-%g{- [
-de: no traces
-en: no traces
-es: ningún indicio
-fi: ei jälkiä
-fr: pas de traces
-it: nessuna traccia
-lv: no traces
-sv: ingen utskrift
-] -}
+%g{- [no traces]
+-}
 </pre>
 </dl>
-
-<p />
-[
-en: And the content of gwsetup.log
-fr: Et le contenu de gwsetup.log
-]
-
-<p />
-
+<p>
+[And the content of gwsetup.log]
+<p>
 <dl><dt><dd>
 <pre>
-%G{- [
-de: no traces
-en: no traces
-es: ningún indicio
-fi: ei jälkiä
-fr: pas de traces
-it: nessuna traccia
-lv: no traces
-sv: ingen utskrift
-] -}
+%G{- [no traces]
+-}
 </pre>
 </dl>
-
-<p />
-
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: Or you can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
-    menu</a>.
-es: Si no Ud. puede regresar al
-    <a href="gwsetup?lang=%l;v=welcome.htm">menú principal</a>.
-fi: Tai voit palata <a href="gwsetup?lang=%l;v=welcome.htm">päävalikkoon</a>.
-fr: Ou vous pouvez revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: Potete tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Vai Jûs varat atgriezties uz <a href="gwsetup?lang=%l;v=welcome.htm">galveno
-    izvçlni</a>.
-sv: Eller du kan återvända till
-    <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+<p>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+</body>
+</html>
