--- a/bin/setup/lang/bso_ok.htm
+++ b/bin/setup/lang/bso_ok.htm
@@ -7,138 +7,30 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Datenbank angelegt
-en: Database created
-es: Base de datos creada
-fi: Tietokanta luotu
-fr: Généalogie créée
-it: Base di dati creata
-lv: Datu bâze izveidota
-sv: Databasen skapad
-]</title>
+  <title>[Database created]
+</title>
 %fsetup.css;
 </head>
 
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[
-de: Datenbank angelegt
-en: Database created
-es: Base de datos creada
-fi: Tietokanta luotu
-fr: Généalogie créée
-it: Base di dati creata
-lv: Datu bâze izveidota
-sv: Databasen skapad
-]
-</h1>
+<h1 style="margin:0;">[Database created]</h1>
 </div>
-
-<p /><p />
-
-[
-de: Die Operation ist beendet. Deine Datenbank namens "%o" wurde angelegt.
-en: Done. The operation is terminated. Your database named "%o" is created.
-es: Muy bien. La operación a terminado. Su base de datos de nombre
-    "%o" ha sido creada.
-fi: Valmis. Toiminto on lopetettu. Tietokanta nimeltä "%0" on luotu.
-fr: L’opération est terminée : votre généalogie "%o" est créée.
-it: L'operazione è terminata. La vostra base di dati "%o" è
-    stata creata.
-lv: Darîts. Datu bâzes izveidoðana ir pabeigta. Jûsu datu bâze "%o" ir
-    izveidota.
-sv: Operationen är avklarad. Din databas benämnd "%o" är skapad.
-]
-
-<p />
-
-[
-de: Um mit der Datenbank zu arbeiten und Änderungen daran vornehmen zu
-    können, muß der <a
-    href="gwsetup?lang=%l;v=gwd_info.htm">gwd-Dienst</a> gestartet sein.
-en: To consult your database, and possibly modify it, the <a
-    href="gwsetup?lang=%l;v=gwd_info.htm">gwd service</a> must have been
-    launched.
-es: Para consultarla y eventualmente modificarla, es necesario que el <a
-    href="gwsetup?lang=%l;v=gwd_info.htm">servicio gwd</a> haya sido 
-    lanzado.
-fi: Lukieksasi tietokantaa ja muokataksesi sitä,
-    <a href="gwsetup?lang=%l;v=gwd_info.htm">gwd palvelun</a> pitää olla
-    päällä.
-fr: Pour la consulter et éventuellement la modifier, assurez-vous que 
-    <a href="gwsetup?lang=%l;v=gwd_info.htm">gwd</a> soit ouvert.
-it: Per consultarla ed eventualmente modificarla, bisogna che
-    <a href="gwsetup?lang=%l;v=gwd_info.htm">il service gwd</a> sia attivo.
-lv: Lai darbotos ar Jûsu datubâzi, jâpalaiþ <a
-    href="gwsetup?lang=%l;v=gwd_info.htm">gwd serviss</a>.
-sv: För att konsultera din databas och möjligen modifiera den, måste <a
-    href="gwsetup?lang=%l;v=gwd_info.htm">gwd servicen</a> startas.
-]
-
-<p />
-
-[
-de: Sofern dies der Fall ist, probiere die unten angegebene Adresse aus. Die
-    angezeigte Seite ist die "Willkommensseite" deiner Datenbank. Setze ein
-    Lesezeichen auf diese Seite.
-en: If it is, try the address below. The displayed page is called "welcome
-    page" of your database. Bookmark it.
-es: Si tal es el caso, ensaye la dirección indicada a
-    continuación. La página mostrada se llama la
-    "Página de Recepción" de su base de datos. 
-    Agrégela a sus registros favoritos.
-fi: Jos se on tämä, kokeile osoitetta alapuolella. Näytettävää sivua kutsutaan
-    tietokannan "tervetuloa" sivuksi. Lisää kirjainmerkki (bookmark).
-fr: Vous pourrez ensuite accéder à votre généalogie
-    en suivant le lien ce-dessous. Vous pouvez l’ajouter aux signets de votre 
-    navigateur.
-it: Se gwd è attivo, provate con l'indirizzo qui sotto. La pagina
-    visualizzata è la "pagina di benvenuto" della vostra base di dati.
-    Mettetela tra i vostri bookmarks.
-lv: Ja tas jau darbojas mçìiniet uzklikðíinât uz saites, kas atrodas zemâk.
-    Parâdîsies jûsu datu bâzes t.s. "sveicinâjuma lapa". Pierakstiet tâs
-    adresi.
-sv: Om den är det, försök med adressen nedan. Den visade sidan kallas
-    "välkomstsidan" för din databas. Lägg till den till dina
-    Favoriter/Bokmärken.
-]
-
-<p />
-
+<p>
+[Done. The operation is terminated. Your database named "%o" is created.]
+<p>
+[To consult your database, and possibly modify it, the gwd service must have been launched.]
+<p>
+[If it is, try the address below. The displayed page is called "welcome page" of your database. Bookmark it.]
+<p>
 <ul>
-
 <li><a
 href="http://%m:%P/%o">http://%m:%P/%o</a>
-
 </ul>
-
-<p />
-
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: You can also return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
-    menu</a>.
-es: Ud puede también regresar al <a
-    href="gwsetup?lang=%l;v=welcome.htm">menú principal</a>.
-fi: Tai voit palata <a href="gwsetup?lang=%l;v=welcome.htm">päävalikkoon</a>.
-fr: Vous pouvez aussi revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: Potete anche tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Jûs variet arî atgriezties <a
-    href="gwsetup?lang=%l;v=welcome.htm">galvenajâ izvçlnç </a>.
-sv: Du kan också återvända till <a
-    href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
-
-<br /><p />
-
-[
-en: Click <a href="gwsetup?lang=%l;v=bso_comm.htm">here</a> for the alert messages in the file "comm.log":
-fr: Cliquer <a href="gwsetup?lang=%l;v=bso_comm.htm">ici</a> pour les messages d’alerte dans le fichier "comm.log".
-]
-
-<p />
+<p>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+<p>
+[Read the alert messages in the file "comm.log"] (<a href="gwsetup?lang=%l;v=bso_comm.htm">comm.log</a>)
+</body>
+</html>
