--- a/bin/setup/lang/err_cnfl.htm
+++ b/bin/setup/lang/err_cnfl.htm
@@ -7,7 +7,8 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[error]</title>
+  <title>[error]
+</title>
 %fsetup.css;
 </head>
 
@@ -16,28 +17,9 @@
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;"><font color="red">[error]</font></h1>
 </div>
+[The name "%o" is used several times.]
+<p>
+[Go back to the previous page.] (<a href="%n">back</a>)
+</body>
+</html>
 
-
-[
-de: Der Name "%o" wird mehrfach benutzt.
-en: The name "%o" is used several times.
-es: El nombre "%o" es utilisado varias veces.
-fi: Nimi "%o" on käytetty useaan otteeseen.
-fr: Le nom "%o" est utilisé plusieurs fois.
-it: Il nome "%o" è utilizzato più volte.
-lv: Vârds "%o" jau eksistç.
-sv: Namnet "%o" är använt flera gånger.
-]
-
-<p />
-
-[
-de: Bitte kehre auf die vorherige Seite zurück und korrigiere den Fehler.
-en: Return to the previous page and correct.
-es: Regrese a la página anterior y corrija el error. 
-fi: Palaa edelliselle sivulle ja korjaa.
-fr: Revenez à la page précédente et corrigez.
-it: Tornate alla pagina precedente e correggete.
-lv: Atgriezieties iepriekðçjâ lapâ un izlabojiet.
-sv: Återvänd till den föregående sidan och rätta till.
-]
