--- a/bin/setup/lang/err_outd.htm
+++ b/bin/setup/lang/err_outd.htm
@@ -7,16 +7,8 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Seite nicht aktuell
-en: Page outdated
-es: Página no actualizada
-fi: Sivu on vanhentunut
-fr: Page non à jour
-it: Pagina non aggiornata
-lv: Lapa novecojusi
-sv: Sidan är gammal
-]</title>
+  <title>[Page outdated]
+</title>
 %fsetup.css;
 </head>
 
@@ -24,44 +16,14 @@ sv: Sidan är gammal
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-<font color="red">[
-de: Seite nicht aktuell
-en: Page outdated
-es: Página no actualizada
-fi: Sivu on vanhentunut
-fr: Page non à jour
-it: Pagina non aggiornata
-lv: Lapa novecojusi
-sv: Sidan är gammal
-]</font></h1>
+<font color="red">[Page outdated]
+</font></h1>
 </div>
 
 <br /><p />
 
-[
-de: Die vorherige Seite enthält veraltete Daten.
-en: The previous page is outdated.
-es: La página anterior no ha sido actualizada.
-fi: Edellinen sivu on vanhentunut.
-fr: La page précédente n’est pas à jour.
-it: La pagina precedente non è stata aggiornata.
-lv: Iepriekðçjâ lapa ir novecojusi.
-sv: Den föregående sidan är gammal.
-]
+[The previous page is outdated.]
 
 <p />
 
-[
-de: Bitte gehe zurück und führe die Funktion "Seite neu
-    laden" deines Webbrowsers aus.
-en: Go backward and select "reload" in your Web browser.
-es: Vuelva a la posición anterior y seleccione "actualizar" en su
-    explorador Web.
-fi: Palaa edelliselle sivulle ja valitse "reload"/"refresh" ("päivitä"),
-    riippun selaimesta ja kielestä.
-fr: Revenez en arrière et sélectionnez "actualiser" dans
-    votre navigateur Web.
-it Tornate indietro e selezionate "Ricarica" nel vostro navigatore web.
-lv: Aizejiet atpakaï un pârlâdçjiet lapu ("reload" komada caurlûkprogrammâ).
-sv: Gå tillbaka och välj "reload" i din webbläsare.
-]
+[Go backward and select "reload" in your Web browser.]
