--- a/bin/setup/lang/err_reco.htm
+++ b/bin/setup/lang/err_reco.htm
@@ -7,139 +7,38 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[error]</title>
+  <title>[error]
+</title>
 %fsetup.css;
 </head>
 
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;"><font color=red>[error]</font></h1>
+<h1 style="margin:0;"><font color=red>[error]
+</font></h1>
 </div>
-
-
-[
-de: Das vorangegangene Kommando hat beim Beenden einen Fehler geliefert.
-    Deine Datenbank "%o" wurde möglicherweise nicht angelegt.
-    Du kannst dir seine <a
-    href="gwsetup?lang=%l;v=traces.htm">Trace-Ausgaben</a> ansehen, 
-    vielleicht kannst du die Erklärung für das Problem erkennen.
-en: The previous command exited with an error code. Your database "%o" may
-    have not been created. Look at the <a
-    href="gwsetup?lang=%l;v=traces.htm">traces</a>, maybe you can find
-    an explanation.
-es: El comando anterior ha terminado con un código de error.
-    Es posible que su base de datos "%o" no haya sido creada.
-    Consulte Ud. las <a href="gwsetup?lang=%l;v=traces.htm">trazas</a>,
-    es posible que allí encuentre Ud. una explicación.
-fi: Edellinen komento keskeytyi virheeseen. Tietokantaa "%o" ei välttämättä
-    luotu. Katso <a href="gwsetup?lang=%l;v=traces.htm">täältä</a>,
-    jos löytäisit selityksen.
-fr: La commande précédente s’est terminée avec un
-    code d’erreur. Il se peut que votre base de données "%o" n’ait
-    pas été créée. Regardez dans les <a
-    href="gwsetup?lang=%l;v=traces.htm">traces</a>, peut-être y
-    trouverez-vous une explication.
-it: Il comando precedente ha generato un codice di errore.
-    Forse la base di dati "%o" non è stata creata. Consultate le <a
-    href="gwsetup?lang=%l;v=traces.htm">tracce</a>, forse vi troverete
-    una spiegazione.
-lv: Ipriekðâjâ komanda beidza savu darbu ar kïûdas paziòojumu. Jûsu datu
-    bâze iespçjams nav izveidota. Skatiet komandas darbîbas <a
-    href="gwsetup?lang=%l;v=traces.htm">pçdas</a>, iespçjams, ka varçsiet
-    rast izskaidrojumu.
-sv: Föregående kommando avslutades med en felkod. Din databas "%o" kanske
-    inte har skapats. Titta på <a
-    href="gwsetup?lang=%l;v=traces.htm">utskriften</a>, kanske kan du finna
-    en förklaring.
-]
-
-<p />
-
-[
-de: Möglicherweise kommst du von einer zu alten
-    <font color=#2f6400><b>GeneWeb</b></font>-Version. In diesem Fall
-    solltest du es <a href="gwsetup?lang=%l;v=recover.htm">nochmal
-    versuchen</a>, wobei du die Option "GEDCOM-Datei verwenden"
-    auswählen solltest (du kannst auch mit dem "zurück"-Knopf
-    deines Browsers auf die Seite zurückgehen um das zu machen).
-en: You may have come from a too old version of
-    <font color=#2f6400><b>GeneWeb</b></font>. In this
-    case, <a href="gwsetup?lang=%l;v=recover.htm">try again</a> to do the
-    transfer using the option to "pass by a GEDCOM file" (you can also
-    go back to the previous screen to do it).
-es: Es posible que Ud. haya comenzado con una versión muy antig&uumla de
-    <font color=#2f6400><b>GeneWeb</b></font>. En ese caso, <a
-    href="gwsetup?lang=%l;v=recover.htm">trate de nuevo</a> de efectuar la
-    transferencia utilizando la opción "pasar por un fichero GEDCOM".
-fi: Olet saattanut tulla vanhemmasta <font color=#2f6400><b>GeneWeb</b></font>
-    versiosta. Tässä tapauksessa
-    <a href="gwsetup?lang=%l;v=recover.htm">kokeile</a> uudestaan siirtoa
-    käyttäen asetusta "GEDCOM tiedostona" (voit palata edelliselle sivulle).
-fr: Il se peut que vous soyez parti d’une trop ancienne version de
-    <b><font color=#2f6400>GeneWeb</font></b>. Dans ce cas, <a
-    href="gwsetup?lang=%l;v=recover.htm">réessayez</a> de faire le
-    transfert en mettant l’option de « passer par un fichier GEDCOM ».
-it: Forse siete partiti da una troppo vecchia versione di
-    <b><font color=#2f6400>GeneWeb</font></b>. In questo caso <a
-    href="gwsetup?lang=%l;v=recover.htm"> riprovate </a> a fare il
-    trasferimento aggiungendo l'opzione "passare per un file GEDCOM".
-lv: Iespçjams Jûsu dati nâk no pârâk vecas
-    <font color=#2f6400><b>GeneWeb</b></font> versijas. Tâdâ gadîjumâ
-    <a href="gwsetup?lang=%l;v=recover.htm">mçìiniet vçlreiz</a> veikt
-    pârveidoðanu, lietojot iespçju "izmantojot GEDCOM datni" (to Jûs arî
-    variet izdarît aizejot atpakï uz ieprieksçjo lapu).
-sv: Du kanske har gått från en alltför gammal version av
-    <font color=#2f6400><b>GeneWeb</b></font>.
-    I det fallet, <a href="gwsetup?lang=%l;v=recover.htm">försök igen</a>
-    för att göra överföringen med optionen "genom en GEDCOM-fil".
-]
-
-<p />
-
-[
-de: Falls du aber genau das schon versucht hast, und es immer noch nicht
-    besser geklappt hat, solltest du den
-    <font color=#2f6400><b>GeneWeb</b></font>-Autor um Hilfe
-    bitten. Sende ihm die Trace-Ausgaben des Kommandos.
-en: If you were already doing that, and it does not work better, ask the
-    creator of the <font color=#2f6400><b>GeneWeb</b></font> program. Send
-    him the traces of the command.
-es: Si es justamente eso que Ud. viene de efectuar y que eso no resuelve el
-    problema; pida consejo al creador del programa
-    <font color=#2f6400><b>GeneWeb</b></font>. Enviele las trazas del comando.
-fi: Jos teit sen jo eikä se toimi paremmin, kysy neuvoa 
-    <font color=#2f6400><b>GeneWeb</b></font> tekijältä. Lähetä hänelle lista
-    tehdyistä komennon jäljistä.
-fr: Si c’est précisément ce que vous venez de faire et que
-    ça ne marche donc pas, demandez conseil au créateur du
-    programme <b><font color=#2f6400>GeneWeb</font></b> en lui envoyant les
-    traces de la commande.
-it: Se è esattamente ciò che avete appena fatto, e non ha
-    funzionato, domandate consiglio al creatore del programma
-    <b><font color=#2f6400>GeneWeb</font></b> inviandogli la traccia del
-    comando.
-lv: Ja Jûs to jau esiet izmçìinâjis un tas nelîdzçja, jautâjiet
-    <font color=#2f6400><b>GeneWeb</b></font> programmas autoram. Nosûtiet
-    viòam arî programas darbîbas pçdas.
-sv: Om du redan har gjort det och det inte fungerade bättre, fråga
-    <font color=#2f6400><b>GeneWeb</b></font>s upphovsman. Sänd honom
-    utskrifterna från kommandona.
-]
-
-<p />
-
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
-es: Ud. puede regresar al <a href="gwsetup?lang=%l;v=welcome.htm">menú
-    principal</a>.
-fi: Voit palata <a href="gwsetup?lang=%l;v=welcome.htm">päävalikkoon</a>.
-fr: Vous pouvez revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: Potete tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Jûs variet atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ
-    izvçlnç</a>.
-sv: Du kan återvända till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+[The previous command exited with an error code. Your database "%o" may have not been created.]
+[Look at the traces, may be you can find an explanation.] 
+(<a href="gwsetup?lang=%l;v=traces.htm">traces</a>)
+%(
+The previous command exited with an error code. Your database "%o" may have not 
+been created. Look at the traces, may be you can find an explanation.
+%)
+<p>
+[You may have come from a too old version of %G. In this case, try again to do the transfer using the option to "pass by a GEDCOM file" (you can also go back to the previous screen to do it).]
+%(
+You may have come from a too old version of %G. In this case, try again to do
+the transfer using the option to "pass by a GEDCOM file" (you can also go back 
+to the previous screen to do it).
+%)
+<p>
+[If you were already doing that, and it does not work better, ask the creator of the %G program. Send him the traces of the command.]
+%(
+If you were already doing that, and it does not work better, ask the creator of 
+the %G program. Send him the traces of the command.
+%)
+<p>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+</body>
+</html>
