--- a/bin/setup/lang/gwu_ok.htm
+++ b/bin/setup/lang/gwu_ok.htm
@@ -7,114 +7,37 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Operation durchgeführt
-en: Operation completed
-es: Operación terminada
-fr: Opération terminée
-it: Operazione terminata
-lv: Darîts
-sv: Operationen klar
-]</title>
+  <title>[Operation completed]
+</title>
 %fsetup.css;
 </head>
 
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[
-de: Operation durchgeführt
-en: Operation completed
-es: Operación terminada
-fr: Opération terminée
-it: Operazione terminata
-lv: Darîts
-sv: Operationen klar
-]
-</h1>
+<h1 style="margin:0;">[Operation completed]</h1>
 </div>
-
 <p>
-
-[
-de: Die Extraktion der <font color=#2f6400><b>GeneWeb</b></font>-Quelldatei
-    ist beendet.
-en: The extraction of the <font color=#2f6400><b>GeneWeb</b></font> source
-    file is terminated.
-es: Bién. La extracción de su fichero fuente
-    <font color=#2f6400><b>GeneWeb</b></font> ha terminado.
-fr: L’extraction du fichier <b><font color=#2f6400>GeneWeb</font></b> est
-    terminée.
-it: L'estrazione del file <b><font color=#2f6400>GeneWeb</font></b> è
-    terminata.
-lv: <font color=#2f6400><b>GeneWeb</b></font> datnes izveide ir pabeigta.
-sv: Exporteringen av <font color=#2f6400><b>GeneWeb</b></font> källfilen
-    är avslutad.
-]
+[The extraction of the %G source file is terminated.]
 
 <p>
 %Iodir;.;{
-[
-en: Files were reconstructed in the original sources directory.<br>
-    Data created without origin file has been directed to the file
-    %o or to comm.log.
-    It is up to you to manage this new source file, or to merge this data into existing files.
-fr: Les fichiers ont été reconstitués dans le dossier d'origine.<br>
-    Les nouvelles données sans fichier d'origine ont été redirigées vers le
-    fichier %o ou vers comm.log.
-    Il vous revient la tâche de gérer ce nouveau fichier .gw ou d'ajouter ces 
-    données aux fichiers existants.
-]
-
+[Files were reconstructed in the original sources directory.<br> Data created without origin file has been directed to the file %o or to comm.log. It is up to you to manage this new source file, or to merge this data into existing files.]
+%(
+Files were reconstructed in the original sources directory.<br> Data created wit
+hout origin file has been directed to the file %o or to comm.log. It is up to yo
+u to manage this new source file, or to merge this data into existing files.
+%)
 |
-[
-de: Es wurde eine Daten namens "%o" erzeugt.
-en: This has built a file named "%o".
-es: Esta operación ha creado un fichero de nombre "%o".
-fr: Cela a construit un fichier de nom "%o".
-it: Questa operazione ha creato un file chiamato "%o".
-lv: Rezultâtâ izveidota datne: "%o".
-sv: Den har skapat en fil benämnd "%o".
-]
-
+[This has built a file named "%o".]
 <p>
-
-[
-de: Diese Datei steht im Verzeichnis "%w".
-en: This file is in the directory "%w".
-es: Este fichero se encuentra en la carpeta "%w".
-fr: Ce fichier se trouve dans le répertoire "%w".
-it: Questo file si trova nella directory "%w".
-]
+[This file is in the directory "%w".]
 }
 <p>
-
 Comm.log:
 <pre>
-%g{- [
-de: empty file
-en: empty file
-es: fichero vacio
-fi: tyhjä tiedosto
-fr: fichier vide
-it: file vuoto
-lv: datne ir tukða
-sv: tom fil
-lv: datne ir tukða
-] -}
+%g{- [empty file]
+}
 </pre>
 <p>
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
-es: Si Ud. lo desea, regrese al
-    <a href="gwsetup?lang=%l;v=welcome.htm">menú principal</a>.
-fr: Vous pouvez revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: Potete tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Jûs variet atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ
-    izvçlnç</a>.
-sv: Du kan återvända till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
