--- a/bin/setup/lang/traces.htm
+++ b/bin/setup/lang/traces.htm
@@ -7,101 +7,29 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Trace-Ausgabe des letzten Kommandos
-en: Trace of the latest command
-es: Trazas del último comando
-fi: Edelliset komennot
-fr: Traces de la dernière commande
-it: Traccia dell'ultimo comando
-lv: Pçdçjâs komandas izpildes pçdas
-sv: Utskriften från det senaste kommandot
-lv: Pçdçjâs komandas izpildes pçdas
-]</title>
+  <title>[Trace of the latest command]
+</title>
 %fsetup.css;
 </head>
 
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[
-de: Trace-Ausgabe des letzten Kommandos
-en: Traces of the latest command
-es: Trazas del último comando
-fi: Edelliset komennot
-fr: Traces de la dernière commande
-it: Traccia dell'ultimo comando
-lv: Pçdçjâs komandas izpildes pçdas
-sv: Utskriften från det senaste kommandot
-lv: Pçdçjâs komandas izpildes pçdas
-]
-</h1>
+<h1 style="margin:0;">[Traces of the latest command]</h1>
 </div>
-
-<br /><p />
-
-[
-de: Hier ist der Inhalt der Datei "comm.log":
-en: Here is the contents of the file "comm.log":
-es: He aquí el contenido del fichero "comm.log":
-fi: Tässä tiedoston "comm.log" sisältö:
-fr: Voici le contenu du fichier "comm.log" :
-it: Ecco il contenuto del file "comm.log"
-lv: Ðeit ir datnes "comm.log" saturs:
-sv: Här är innehållet i filen "comm.log":
-lv: Ðeit ir datnes "comm.log" saturs:
-]
-
+<br><p>
+[Here is the contents of the file "comm.log"][:]
 <dl><dt><dd>
 <pre>
-%g{- [
-de: empty file
-en: empty file
-es: fichero vacio
-fi: tyhjä tiedosto
-fr: fichier vide
-it: file vuoto
-lv: datne ir tukða
-sv: tom fil
-lv: datne ir tukða
-] -}
+%g{- [empty file]
+-}
 </pre>
 </dl>
-
-[
-en: And the content of gwsetup.log 
-fr: Et le contenu de gwsetup.log
-]
+[And the content of gwsetup.log][:]
 <dl><dt><dd>
 <pre>
-%G{- [
-de: no traces
-en: no traces
-es: ningÃºn indicio
-fi: ei jÃ¤lkiÃ¤
-fr: pas de traces
-it: nessuna traccia
-lv: no traces
-sv: ingen utskrift
-] -}
+%G{- [no traces]
+-}
 </pre>
 </dl>
-
-
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
-    menu</a>.
-es: Ud puede regresar al <a href="gwsetup?lang=%l;v=welcome.htm">menú
-    principal</a>.
-fi: Voit palata takaisin <a href="gwsetup?lang=%l;v=welcome.htm">päävalikkoon</a>.
-fr: Vous pouvez revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: Potete tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Jûs variet atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ
-    izvçlnç</a>.
-sv: Du kan återvända till <a
-    href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
