--- a/bin/setup/lang/update_nldb.htm
+++ b/bin/setup/lang/update_nldb.htm
@@ -7,51 +7,22 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Update_nldb
-en: Update_nldb
-es: Update_nldb
-fi: Update_nldb
-fr: Update_nldb
-it: Update_nldb
-lv: Update_nldb
-sv: Update_nldb
-]</title>
+  <title>[Update_nldb]
+</title>
 %fsetup.css;
 </head>
 
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[
-de: Aktualisieren Sie Links-Seite / Familien-Chronik
-en: Update links page / family chronicle
-es: Actualizar página de enlaces / crónica familiar
-fi: Päivitä linkit sivu / sukukronikka
-fr: Mise à jour des liens fiche/chronique familiale
-it: Aggiornamento pagina dei link / famiglia cronaca
-lv: Atjaunināt saites lapu / ġimenes hroniku
-sv: Uppdatera länksida / släktkrönika
-]
-</h1>
+<h1 style="margin:0;">[Update links page / family chronicle]</h1>
 </div>
 <p>
 <form method="get" action="update_nldb">
 <input type="hidden" name="opt" value="check">
 <input type="hidden" name="lang" value="%l">
 <ul><li>
-[
-de: Wähle deine Datenbank mit dem zugehörigen Schalter.
-en: Select your database by clicking on the associated button.
-es: Seleccione su base de datos cliqueando en el botón asociado.
-fi: Valitse tietokantasi painamalla nappia alla.
-fr: Sélectionnez votre base de données en cliquant sur le
-    bouton associé.
-it: Selezionate la vostra bese di dati cliccando sul bottone associato.
-lv: Select your database by clicking on the associated button.
-sv: Välj din databas genom att klicka på motsvarande knapp.
-]
+[Select your database by clicking on the associated button][:]
 <p>
 <table class="setup">
 %b{
@@ -61,40 +32,13 @@ sv: Välj din databas genom att klicka på motsvarande knapp.
 <td><a href="http://%m:%P/%a">%a</a></td>
 </tr>|
 <tr align="left">
-<td>- [
-de: keine Datenbank vorhanden
-en: there is no database at present
-es: no existe ninguna base de datos actualmente
-fi: ei tietokantaa saatavilla
-fr: il n’y a aucune base de données actuellement
-it: attualmente non esiste nessuna base di dati
-lv: there is no database at present
-sv: det finns ingen databas för tillfället
-]</tr></td>}
+<td>- [there is no database at present]
+</tr></td>}
 </table>
 <p>
 <li>
-[
-de: Dann drücke diesen Knopf:
-en: Then press this button:
-es: Luego apoye en este botón:
-fi: Sitten paina tätä nappia:
-fr: Puis appuyez sur ce bouton :
-it: E poi cliccate su questo bottone:
-lv: Then press this button:
-sv: Tryck sedan på denna knapp:
-]
+[Then click on this button][:]
 <p>
-
-<input type="submit" value="[
-de: Update_nldb
-en: Update_nldb
-es: Update_nldb
-fi: Update_nldb
-fr: Update_nldb
-it: Update_nldb
-lv: Update_nldb
-sv: Update_nldb
-]">
+<input type="submit" value="[Update_nldb]">
 </ul>
 </form>
