--- a/bin/setup/lang/welcome.htm
+++ b/bin/setup/lang/welcome.htm
@@ -15,380 +15,75 @@
 
 <div style="background:url('images/gwlogo.png') no-repeat left top;
   text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">[
-co: Ghjestione è Creazione
-de: Verwaltung und Erstellung
-en: Management and creation
-es: Ggestión y Creación
-fr: Gestion et création
-it: Gestione e la creazione
-lv: Vadiba un veidosana
-sv: ledning och skapande
-]
-</h1>
+<h1 style="margin:0;">[Management and creation]</h1>
 </div>
-
-<br><br>
-
+<p>
 <div class="welcome">
   <div style="float:left; width:50%%">
     <div>
-    <span style="font-weight:bold">
-[
-co: Consultà...
-de: Betrachte…
-en: Consult…
-es: Consultar…
-fi: Konsultoi…
-fr: Consulter…
-it: Consultare…
-lv: Darboties ar…
-sv: Konsultera…
-]
-    </span>
-<ul>
-
-<li>[
-co: <a href="gwsetup?lang=%l;v=list.htm">l'arburi chì esistenu</a> 
-de: <a href="gwsetup?lang=%l;v=list.htm">Stammbaum</a>
-en: <a href="gwsetup?lang=%l;v=list.htm">Family Tree</a>
-es: <a href="gwsetup?lang=%l;v=list.htm">árbol genealógico</a>
-fi: <a href="gwsetup?lang=%l;v=list.htm">sukupuu</a>
-fr: <a href="gwsetup?lang=%l;v=list.htm">les généalogie existantes</a>
-it: <a href="gwsetup?lang=%l;v=list.htm">albero genealogico</a>
-lv: <a href="gwsetup?lang=%l;v=list.htm">gimenes koks</a>
-sv: <a href="gwsetup?lang=%l;v=list.htm">Family Tree</a>
-]
-
-<li>[
-co: <a href="gwsetup?lang=%l;v=traces.htm">a cronulugia è e statistiche</a>.
-de: <a href="gwsetup?lang=%l;v=traces.htm">der Fehler der Geschichte und Statistik</a>.
-en: <a href="gwsetup?lang=%l;v=traces.htm">the error history and statistics</a>.
-es: <a href="gwsetup?lang=%l;v=traces.htm">el historial de errores y estadísticas</a>
-fi: <a href="gwsetup?lang=%l;v=traces.htm">virhe historia ja tilastot</a>.
-fr: <a href="gwsetup?lang=%l;v=traces.htm">l’historique des erreurs et statistiques</a>
-it: <a href="gwsetup?lang=%l;v=traces.htm">fault Storia e statistiche</a>
-lv: <a href="gwsetup?lang=%l;v=traces.htm">vaina vesture un statistika</a>
-sv: <a href="gwsetup?lang=%l;v=traces.htm">felhistorik och statistik</a>.
-]
-
-</ul>
+      <span style="font-weight:bold">[Consult]</span>
+      <ul>
+        <li>[family Trees] (<a href="gwsetup?lang=%l;v=list.htm">list</a>)
+        <li>[the error history and statistics] (<a href="gwsetup?lang=%l;v=traces.htm">errors</a>)
+      </ul>
     </div>
     <div>
-    <span style="font-weight:bold">
-[
-co: arregistrà
-de: Sparen…
-en: Save…
-es: Ahorrar…
-fi: säästää…
-fr: Sauvegarder…
-it: Salvare…
-lv: Iznemot…
-sv: Spara…
-]
-    </span>
-<ul>
-
-<li>[
-co: un <a href="gwsetup?lang=%l;v=gwb2ged.htm">schedariu GEDCOM</a>
-de: eine <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM-Datei</a>
-en: a <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM file</a>
-es: un <a href="gwsetup?lang=%l;v=gwb2ged.htm">fichero GEDCOM</a>
-fi: <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM tiedosto</a>
-fr: un <a href="gwsetup?lang=%l;v=gwb2ged.htm">fichier GEDCOM</a>
-it: un <a href="gwsetup?lang=%l;v=gwb2ged.htm">file GEDCOM</a>
-lv: <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM datni</a>
-sv: en <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM-fil</a>
-]  (gwb2ged)
-
-<li>[
-co: un <a href="gwsetup?lang=%l;v=gwu.htm">schedariu di fonte GeneWeb</a>
-de: eine <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb-Quelldatei</a>
-en: a <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb source file</a>
-es: un <a href="gwsetup?lang=%l;v=gwu.htm">fichero fuente GeneWeb</a>
-fi: <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb lähdetiedosto</a>
-fr: un <a href="gwsetup?lang=%l;v=gwu.htm">fichier source GeneWeb</a>
-it: un <a href="gwsetup?lang=%l;v=gwu.htm">file sorgente GeneWeb</a>
-lv: <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb datni</a>
-sv: en <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb källfil</a>
-] (gwu)
-
-</ul>
+      <span style="font-weight:bold">[Save]</span>
+      <ul>
+        <li>[a GEDCOM source file] (<a href="gwsetup?lang=%l;v=gwb2ged.htm">gwb2ged</a>)
+        <li>[a GeneWeb source file] (<a href="gwsetup?lang=%l;v=gwu.htm">gwu</a>)
+      </ul>
     </div>
   </div>
-
   <div style="float:left; width:50%%;">
-    <span style="font-weight:bold;">
-[
-co: Creà una genealugia
-de: Familienstammbaum erstellen
-en: Create Family Tree
-es: Crear árbol genealógico
-fi: Luo Family Tree
-fr: Créer une généalogie
-it: Crea l'albero genealogico
-lv: Izveidot Family Tree
-sv: Skapa Family Tree
-]
-    </span>
-<ul>
-
-<li>[
-co: à partesi d'un <a href="gwsetup?lang=%l;v=ged2gwb.htm">schedariu GEDCOM</a>
-de: aus einer <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM-Datei</a>
-en: from a <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM file</a>
-es: a partir de un <a href="gwsetup?lang=%l;v=ged2gwb.htm">fichero GEDCOM</a>
-fi: <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM tiedostosta</a>
-fr: à partir d’un <a href="gwsetup?lang=%l;v=ged2gwb.htm">fichier GEDCOM</a>
-it: partendo da <a href="gwsetup?lang=%l;v=ged2gwb.htm">un file GEDCOM</a>
-lv: no <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM datnes</a>
-sv: från en <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM-fil</a>
-] (ged2gwb)
-
-<li>[
-co: à partesi d'un <a href="gwsetup?lang=%l;v=gwc.htm">schedariu di fonte GeneWeb</a>
-de: aus einer <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb-Quelldatei</a>
-en: from a <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb source file</a>
-es: a partir de un <a href="gwsetup?lang=%l;v=gwc.htm">fichero fuente GeneWeb</a>
-fi: <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb lähdetiedostosta</a>
-fr: à partir d’un <a href="gwsetup?lang=%l;v=gwc.htm">fichier source GeneWeb</a>
-it: partendo da un <a href="gwsetup?lang=%l;v=gwc.htm">file sorgente GeneWeb</a>
-lv: no <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb datnes</a>
-sv: från en <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb källfil</a>
-] (gwc)
-
-<li>[
-co: <a href="gwsetup?lang=%l;v=simple.htm">viota</a>
-de: <a href="gwsetup?lang=%l;v=simple.htm">leer</a>
-en: <a href="gwsetup?lang=%l;v=simple.htm">empty</a>
-es: <a href="gwsetup?lang=%l;v=simple.htm">vacío</a>
-fi: <a href="gwsetup?lang=%l;v=simple.htm">tyhjä</a>
-fr: <a href="gwsetup?lang=%l;v=simple.htm">vide</a>
-it: <a href="gwsetup?lang=%l;v=simple.htm">vuoto</a>
-lv: <a href="gwsetup?lang=%l;v=simple.htm">tukšs</a>
-sv: <a href="gwsetup?lang=%l;v=simple.htm">tom</a>
-] (gwc)
-
-</ul>
+    <span style="font-weight:bold;">[Create Family Tree]</span>
+    <ul>
+      <li>[from a GEDCOM source file] (<a href="gwsetup?lang=%l;v=ged2gwb.htm">ged2gwb</a>)
+      <li>[from a GeneWeb source file] (<a href="gwsetup?lang=%l;v=gwc.htm">gwc</a>)
+      <li>[empty] (<a href="gwsetup?lang=%l;v=simple.htm">gwc</a>)
+    </ul>
   </div>
-
 </div>
-
-<br><hr /><br>
-
+<br><hr><br>
 <div>
-<div style="float:left;">
-<span>
-[
-co: Ozzioni d'espertu
-de: Erweiterte Optionen
-en: Advanced Options
-es: Opciones avanzadas
-fi: Lisäasetukset
-fr: Options avancées
-it: Opzioni avanzate
-lv: Papildus opcijas
-sv: Avancerade alternativ
-]
-</span>
-<ul>
-<li>[
-co: <a href="gwsetup?lang=%l;v=cleanup.htm">Nettata</a>
-de: <a href="gwsetup?lang=%l;v=cleanup.htm">Aufräumen</a>
-en: <a href="gwsetup?lang=%l;v=cleanup.htm">Cleaning up</a>
-es: <a href="gwsetup?lang=%l;v=cleanup.htm">Limpieza</a>
-fi: <a href="gwsetup?lang=%l;v=cleanup.htm">Puhdistus</a>
-fr: <a href="gwsetup?lang=%l;v=cleanup.htm">Nettoyage</a>
-it: <a href="gwsetup?lang=%l;v=cleanup.htm">Pulizia</a>
-lv: <a href="gwsetup?lang=%l;v=cleanup.htm">Sakopðanu</a>
-sv: <a href="gwsetup?lang=%l;v=cleanup.htm">Upprensning</a>
-] (consang)
-
-<li>[
-co: <a href="gwsetup?lang=%l;v=rename.htm">Cambiu di nome</a>
-de: <a href="gwsetup?lang=%l;v=rename.htm">Umbenennen</a>
-en: <a href="gwsetup?lang=%l;v=rename.htm">Renaming</a>
-es: <a href="gwsetup?lang=%l;v=rename.htm">Cambio de nombre</a>
-fi: <a href="gwsetup?lang=%l;v=rename.htm">Uudelleen nimeäminen</a>
-fr: <a href="gwsetup?lang=%l;v=rename.htm">Renommage</a>
-it: <a href="gwsetup?lang=%l;v=rename.htm">Cambio di nome</a>
-lv: <a href="gwsetup?lang=%l;v=rename.htm">Pârsaukðanu</a>
-sv: <a href="gwsetup?lang=%l;v=rename.htm">Oomdöpning</a>
-]
-
-<li>[
-co: <a href="gwsetup?lang=%l;v=delete.htm">Cacciatura</a>
-de: <a href="gwsetup?lang=%l;v=delete.htm">Löschen</a>
-en: <a href="gwsetup?lang=%l;v=delete.htm">Deletion</a>
-es: <a href="gwsetup?lang=%l;v=delete.htm">Supresión</a>
-fi: <a href="gwsetup?lang=%l;v=delete.htm">Poisto</a>
-fr: <a href="gwsetup?lang=%l;v=delete.htm">Suppression</a>
-it: <a href="gwsetup?lang=%l;v=delete.htm">Cancellazione</a>
-lv: <a href="gwsetup?lang=%l;v=delete.htm">Izmeðanu</a>
-sv: <a href="gwsetup?lang=%l;v=delete.htm">Radering</a>
-]
-
-<li>[
-co: <a href="gwsetup?lang=%l;v=merge.htm">Fusione cù d'altre base genealogiche</a>
-de: <a href="gwsetup?lang=%l;v=merge.htm">Zusammenführen mit anderen Datenbanken</a>
-en: <a href="gwsetup?lang=%l;v=merge.htm">Merging with other databases</a>
-fi: <a href="gwsetup?lang=%l;v=merge.htm">Yhdistyminen muiden tietokantojen kanssa</a>
-fr: <a href="gwsetup?lang=%l;v=merge.htm">Fusion de généalogies</a>
-it: <a href="gwsetup?lang=%l;v=merge.htm">Fusione con altre basi</a>
-sv: <a href="gwsetup?lang=%l;v=merge.htm">Sammanslagning med andra databaser</a>
-]
-
-<li>[
-co: <a href="gwsetup?lang=%l;v=save.htm">Salvaguardia è resturazione</a>
-de: <a href="gwsetup?lang=%l;v=save.htm">Sichern und Restaurieren</a>
-en: <a href="gwsetup?lang=%l;v=save.htm">Saving and restoring</a>
-es: <a href="gwsetup?lang=%l;v=save.htm">Copia de seguridad y una restauración</a>
-fi: <a href="gwsetup?lang=%l;v=save.htm">Tallentaminen ja palautus</a>
-fr: <a href="gwsetup?lang=%l;v=save.htm">Sauvegarde et restauration</a>
-it: <a href="gwsetup?lang=%l;v=save.htm">Backup and restore</a>
-lv: <a href="gwsetup?lang=%l;v=save.htm">Saglabâðanu un atjaunoðanu</a>
-sv: <a href="gwsetup?lang=%l;v=save.htm">Spara och återskapa</a>
-] (gwu)
-
-<li>[
-co: <a href="gwsetup?lang=%l;v=consang.htm">Initialisazione di e consanguinità</a>
-de: <a href="gwsetup?lang=%l;v=consang.htm">Initialisierung der Blutsverwandtschaften</a>
-en: <a href="gwsetup?lang=%l;v=consang.htm">Initialisation of consanguinities</a>
-es: <a href="gwsetup?lang=%l;v=consang.htm">Inicialización de las consanguinidades</a>
-fi: <a href="gwsetup?lang=%l;v=consang.htm">Perheenjäsenten yhdistäminen</a>
-fr: <a href="gwsetup?lang=%l;v=consang.htm">Initialisation des consanguinités</a>
-it: <a href="gwsetup?lang=%l;v=consang.htm">Inizializzazione delle consanguineità</a>
-lv: <a href="gwsetup?lang=%l;v=consang.htm">Asinsradniecîbas sakârtoðana</a>
-sv: <a href="gwsetup?lang=%l;v=consang.htm">Beräkning av blodsband</a>
-] (consang)
-
-<li>[
-co: <a href="gwsetup?lang=%l;v=update_nldb.htm">Attualisazione di i ligami scheda/cronaca famigliale</a>
-de: <a href="gwsetup?lang=%l;v=update_nldb.htm">Aktualisieren Sie Links-Seite / Familien-Chronik</a>
-en: <a href="gwsetup?lang=%l;v=update_nldb.htm">Update links page / family chronicle</a>
-es: <a href="gwsetup?lang=%l;v=update_nldb.htm">Actualizar página de enlaces / crónica familiar</a>
-fi: <a href="gwsetup?lang=%l;v=update_nldb.htm">Päivitä linkit sivu / sukukronikka</a>
-fr: <a href="gwsetup?lang=%l;v=update_nldb.htm">Mise à jour des liens fiche/chronique familiale</a>
-it: <a href="gwsetup?lang=%l;v=update_nldb.htm">Aggiornamento pagina dei link / famiglia cronaca</a>
-lv: <a href="gwsetup?lang=%l;v=update_nldb.htm">Atjauninat saites lapu / gimenes hroniku</a>
-sv: <a href="gwsetup?lang=%l;v=update_nldb.htm">Uppdatera länksida / släktkrönika</a>
-] (update_nldb)
-
-<li>[
-co: <a href="gwsetup?lang=%l;v=connex.htm">Calculeghja i cumpunenti cunnessi</a>
-en: <a href="gwsetup?lang=%l;v=connex.htm">Compute connected componants</a>
-fr: <a href="gwsetup?lang=%l;v=connex.htm">Calcule les composantes connexes</a>
-] (connex)
-
-<li>[
-co: <a href="gwsetup?lang=%l;v=gwdiff.htm">Calculeghja a sfarenza trà duie base</a>
-en: <a href="gwsetup?lang=%l;v=gwdiff.htm">Compute the difference between two bases</a>
-fr: <a href="gwsetup?lang=%l;v=gwdiff.htm">Calcule la différence entre deux bases</a>
-] (gwdiff)
-
-<li>[
-en: <a href="gwsetup?lang=%l;v=gwfix.htm">Fixes problems in a base</a>
-fr: <a href="gwsetup?lang=%l;v=gwfix.htm">Corrige les problèmes d'une base</a>
-] (gwfixbase)
-
-
-</ul>
+  <div style="float:left;">
+    <span><b>[Advanced Options]</b></span>
+    <ul>
+      <li>[Cleanup] (<a href="gwsetup?lang=%l;v=cleanup.htm">cleanup</a>)
+      <li>[Renaming] (<a href="gwsetup?lang=%l;v=rename.htm">rename</a>)
+      <li>[Deletion] (<a href="gwsetup?lang=%l;v=delete.htm">delete</a>)
+      <li>[Merging with other databases] (<a href="gwsetup?lang=%l;v=merge.htm">merge</a>)
+      <li>[Saving and restoring] (<a href="gwsetup?lang=%l;v=save.htm">gwu</a>)
+      <li>[Initialisation of consanguinities] (<a href="gwsetup?lang=%l;v=consang.htm">consang</a>)
+      <li>[Update links page / family chronicle] (<a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>)
+      <li>[Compute connected componants] (<a href="gwsetup?lang=%l;v=connex.htm">connex</a>)
+      <li>[Compute the difference between two bases] (<a href="gwsetup?lang=%l;v=gwdiff.htm">gwdiff</a>)
+      <li>[Fixes problems in a base] (<a href="gwsetup?lang=%l;v=gwfix.htm">gwfixbase</a>)
+    </ul>
+  </div>
+  <div style="float:left;">
+    <span><b>[Configure]</b></span>
+    <ul>
+      <li>[the parameters of a database] (<a href="gwsetup?lang=%l;v=gwf.htm">.gwf</a>)
+      <li>[the parameters of the gwd service] (<a href="gwd?lang=%l;v=gwd.htm">gwd</a>)
+    </ul>
+  </div>
 </div>
-
-<div style="float:left;">
-<span>
-[
-co: Cunfigurà
-de: Konfigurieren
-en: Configure
-es: Configurar
-fi: Määritä
-fr: Configurer
-it: Configura
-lv: Konfiguret
-sv: Konfigurera
-]
-</span>
-<ul>
-
-<li>[
-co: i parametri d'una <a href="gwsetup?lang=%l;v=gwf.htm">basa di dati</a>
-de: die Parameter einer <a href="gwsetup?lang=%l;v=gwf.htm">Datenbank</a>
-en: the parameters of a <a href="gwsetup?lang=%l;v=gwf.htm">database</a>
-es: los parámetros de una <a href="gwsetup?lang=%l;v=gwf.htm">base de datos</a>
-fi: <a href="gwsetup?lang=%l;v=gwf.htm">tietokannan</a> parametrit
-fr: les paramètres d’une <a href="gwsetup?lang=%l;v=gwf.htm">base de données</a>
-it: i parametri di une <a href="gwsetup?lang=%l;v=gwf.htm">base di dati</a>
-lv: <a href="gwsetup?lang=%l;v=gwf.htm">datu bâzes</a>  parametrus
-sv: parametrarna för en <a href="gwsetup?lang=%l;v=gwf.htm">databas</a>
-]
-
-<li>[
-co: i parametri di u <a href="gwd?lang=%l;v=gwd.htm">serviziu gwd</a>
-de: die Parameter des <a href="gwd?lang=%l;v=gwd.htm">gwd-Dienstes</a>
-en: the parameters of the <a href="gwd?lang=%l;v=gwd.htm">gwd service</a>
-es: los parámetros de un <a href="gwd?lang=%l;v=gwd.htm">servicio gwd</a>
-fi: <a href="gwd?lang=%l;v=gwd.htm">gwd palvelun</a> parametrit
-fr: les paramètres du <a href="gwd?lang=%l;v=gwd.htm">service gwd</a>
-it: i parametri del <a href="gwd?lang=%l;v=gwd.htm">service gwd</a>
-lv: <a href="gwd?lang=%l;v=gwd.htm">gwd servisa</a> parametrus
-sv: parametrarna för <a href="gwd?lang=%l;v=gwd.htm">gwd servicen</a>
-]
-
-</ul>
-</div>
-
-</div>
-
 <p style="clear:both">
-
 <p>
-
-[
-co: Pudete cunsultà dinù a <a
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">ducumentazione</a> sana di
-    <b><font color=#2f6400>GeneWeb</font></b>.
-de: Du kannst auch auf die komplette
-    <font color=#2f6400><b>GeneWeb</b></font>-<a
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">Dokumentation</a> zugreifen.
-en: You can also consult the complete <a 
-    href="http://geneweb.tuxfamily.org/wiki/gwsetup" target="_blank">documentation</a> of <font
-    color=#2f6400><b>GeneWeb</b></font>.
-es: Ud puede igualmente consultar la <a
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">documentación</a> completa de
-    <font color=#2f6400><b>GeneWeb</b></font>.
-fr: Vous pouvez également consulter la <a
-    href="http://geneweb.tuxfamily.org/wiki/gwsetup/fr" target="_blank">documentation</a> complète de
-    <b><font color=#2f6400>GeneWeb</font></b>.
-it: Potete anche consultare la <a
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">documentazione</a> completa di
-    <b><font color=#2f6400>GeneWeb</font></b>.
-lv: Kâ arî Jûs variet skatît pilnîgu <font
-    color=#2f6400><b>GeneWeb</b></font> <a
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">aprakstu</a> .
-sv: Du kan också konsultera den kompletta <a
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">dokumentationen</a> för <font
-    color=#2f6400><b>GeneWeb</b></font>.
-]
-
+[You can also consult the complete documentation of %G.] (%D)
 <br><br>
 <div style="float: left; align: center;">
-<span>
-[
-co: Affissà in:
-en: Display in:
-fr: Afficher en :
-]
-</span>
-<a href="co">Corsu</a>
-<a href="de">Deutsch</a>
-<a href="en">English</a>
-<a href="es">Español</a>
-<a href="fr">Français</a>
-<a href="it">Italiano</a>
-<a href="lv">Latviesu</a>
-<a href="sv">Svenska</a>
+  <span>[Display in][:]</span>
+  <a href="co">Corsu</a>
+  <a href="de">Deutsch</a>
+  <a href="en">English</a>
+  <a href="es">Español</a>
+  <a href="fr">Français</a>
+  <a href="it">Italiano</a>
+  <a href="lv">Latviesu</a>
+  <a href="sv">Svenska</a>
 </div>
 <br>
-
+</body>
+</html>
