--- a/bin/setup/lang/bso.htm
+++ b/bin/setup/lang/bso.htm
@@ -7,193 +7,57 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Datenbank anlegen
-en: Creation of a database
-es: Creación de una base de datos
-fi: Tietokannan luonti
-fr: Création d’une généalogie
-it: Creazione di una base di dati
-lv: Datu bâzes izveidoðana
-sv: Skapa en databas
-]</title>
+  <title>[Creation of a database]
+</title>
 %fsetup.css;
 </head>
 
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[
-de: Datenbank anlegen
-en: Creation of a database
-es: Creación de una base de datos
-fi: Tietokannan luonti
-fr: Création d’une généalogie
-it: Creazione di una base di dati
-lv: Datu bâzes izveidoðana
-sv: Skapa en databas
-]
-</h1>
+<h1 style="margin:0;">[Creation of a database]</h1>
 </div>
-
-<p /><p />
+<p>
 <ul>
-
 %v{<li>
-
-[
-de: <b>Warnung:</b> In deinem 
-    <a href="gwsetup?lang=%l;v=list.htm">Verzeichnis</a>
-    existiert bereits eine Datenbank mit dem Namen "%o".
-    Wenn du den "Ok"-Knopf drückst, wird sie gelöscht.
-en: <b>Warning</b>: there already exists a database with the name "%o" in your
-    <a href="gwsetup?lang=%l;v=list.htm">directory</a>. If you push the button
-    "Ok" below, it will be erased.
-es: <b>Atención</b>: una base llamada "%o" ya existe en su
-    <a href="gwsetup?lang=%l;v=list.htm">carpeta</a>. 
-    Si Ud apoya en el botón "Ok" la base inicial sera borrada
-fi: <b>Varoitus</b>: tietokanta nimellä "%o" on jo luotuna
-    <a href="gwsetup?lang=%l;v=list.htm">hakemistossa</a>. Mikäli painat
-    "Ok" -nappia alla, olemassa oleva tietokanta tuhoutuu.
-fr: <b>Attention</b> : il existe déjà une généalogie de nom
-    "%o" dans votre <a
-    href="gwsetup?lang=%l;v=list.htm">répertoire</a>. Si vous
-    appuyez sur le bouton "Ok" ci-dessous, cela va l’effacer.
-it: <b>Attenzione</b>: esiste una base di dati chiamata
-    "%o" nella <a
-    href="gwsetup?lang=%l;v=list.htm">directory</a>. Se cliccate
-    sul bottone "Ok" qui sotto, essa sarà cancellata.
-lv: <b>Brîdinâjums</b>: ðâda datubâze "%o" jau eksistç Jûsu
-    <a href="gwsetup?lang=%l;v=list.htm">katalogâ</a>. Ja Jûs nospiedîsiet
-    podziòu "Ok" zemâk, datu bâze tiks dzçsta.
-sv: <b>Varning</b>: det existerar redan en databas med namnet "%o" i din
-    <a href="gwsetup?lang=%l;v=list.htm">katalog</a>. Om du trycker på knappen
-    "OK" nedan, kommer den att bli raderad.
-]<p />
-
-[
-de: Falls du diese Funktion gerade schonmal ausgeführt hattest, dann
-    war diese Datenbank wahrscheinlich das Ergebnis und daher kann dieser
-    Fehler hier ignoriert werden. Andernfalls kehre auf die vorherige Seite
-    zurück und wähle einen anderen Namen für deine Datenbank.
-en: If you just made this, it is probably its result, and therefore it is
-    not important. Else, return to the previous page and choose another
-    name for your database.
-es: Si Ud viene de realizar esta operación, debe probablemente
-    tratarse de su resultado, entoces !no pasa nada!. Si no, regrese 
-    ha la posición anterior y escoja otro nombre para su base.
-fi: Jos juuri teit tietokannan, tämä on todennäköisesti tulos siitä ja siksi
-    ei ole tärkeä. Muutoin, palaa edelliselle sivulle ja valitse toinen
-    nimi tietokannalle.
-fr: Si vous venez déjà de faire cette manipulation, il
-    s’agit probablement de son résultat, ce n’est donc pas
-    grave. Sinon, revenez en arrière et choisissez un autre nom
-    pour votre base.
-it: Se avete appena fatto questa operazione, si tratta probabilmente
-    del suo risultato; niente di grave, quindi. Altrimenti, tornate indietro
-    e scegliete un nuovo nome per la vostra base.
-lv: Ja Jûs tikai tikko esat to izveidojuði, tâ varbût ir izveides
-    rezultâts, un tad tam nav nozîmes. Citâdi, atgriezieties uz
-    iepriekðçjo lapu un izvçlieties citu datu bâzes nosaukumu.
-sv: Om du precis gjorde detta, har databasen blivit raderad nu.
-    Annars, återvänd till föregående sida och välj ett annat
-    namn för din databas.
-]<p />}
-
+[Warning: there already exists a database with the name "%o" in your directory. If you push the button "Ok" below, it will be erased.]
+%(
+Warning: there already exists a database with the name "%o" in your directory.
+If you push the button "Ok" below, it will be erased.
+%)
+<p>
+[If you just made this, it is probably its result, and therefore it is not important. Else, return to the previous page and choose another name for your database.]
+%(
+If you just made this, it is probably its result, and therefore it is not important. 
+Else, return to the previous page and choose another name for your database.
+%)
+<p>}
 <li>
-
-[
-de: Wir legen nun eine Datenbank mit dem Namen "%o" an. 
-    Beachte: Je nach Fall kann diese Operation nur ein Augenzwinkern
-    lang dauern, oder aber wenige Sekunden oder sogar einige Minuten
-    benötigen. Bitte habe Geduld.
-en: We are going to create a database named "%o". Remark: this operation
-    can answer in the twinkling of a eye or take some tenths of seconds or
-    some minutes, depending on the cases. Be patient.
-es: Vamos a crear una base que tiene por nombre "%o". 
-    Remarca: esta operación puede efectuarse inmediatamente o tomar unas
-    decenas de segundos o algunos minutos, en función del caso. 
-    Tenga paciencia. 
-fi: Luomme tietokannan nimeltä "%o". Huomautus: tämä toiminto voi kestää
-    hetken, riippuen tapauksesta. Ole kärsivällinen.
-fr: Nous allons créer une généalogie de nom "%o". Remarque : cette
-    opération peut s’effectuer en un clin d’oeil ou prendre
-    quelques dizaines de secondes ou quelques minutes, suivant les
-    cas. Soyez patient.
-it: Ora creiamo una base di dati chiamata "%o". Nota: questa operazione
-    si effettua in qualche secondo o in quanche minuto, secondo i casi.
-    Siate paziente.
-lv: Tiks izveidota datu bâze "%o". Piezîme: ði darbîba var ilgt vienu
-    acumirkli vai daþus desmitus sekunþu vai minûðu atkarîbâ no
-    aptâkïiem. Esiet pacietîgs.
-sv: Vi ska nu skapa en databas benämnd "%o". Obs: denna operation
-    kan gå blixtsnabbt eller ta tiotalet sekunder eller
-    flera minuter, beroende på fallet. Ha tålamod.
-]
-
-<p />
-
-[
-de: Drücke den Knopf, um die Datenbank anzulegen
-en: Push the button below to create you database
-es: Apoye en el botón inferior para crear su base de datos
-fi: Paina nappia alla luodaksesi tietokannan
-fr: Appuyez sur Ok pour créer votre généalogie
-it: Cliccate sul bottone qui sotto per creare la vostra base di dati
-lv: Nospiediet zemâk esoðo podziòu, lai izveidotu datu bâzi
-sv: Tryck på knappen nedan för att skapa din databas
-]%v{<br /><blink><font color=red>[
-de:  und die alte Datenbank "%o" im Zielverzeichnis zu löschen
-en: , and overwrite the previous database "%o" of the target directory
-es:  y destruir  la base "%o" de la carpeta de llegada
-fi: , ja ylikirjoita tietokanta "%o" kohdehakemistosta
-fr:  et écraser la base "%o" du répertoire d’arrivée
-it:  e cancellare la base "%o" dalla directory di arrivo
-lv: , un dzçstu iepriekðçjo datu bâzi "%o" katalogâ
-sv:  och radera den föregående databasen "%o" från målkatalogen
-]</font></blink>}:
-
-<p />
-
+[We are going to create a database named "%o". Remark: this operation can answer in the twinkling of a eye or take some tenths of seconds or some minutes, depending on the cases. Be patient.]
+%(
+We are going to create a database named "%o". Remark: this operation can answer 
+in the twinkling of a eye or take some tenths of seconds or some minutes, depend
+ing on the cases. Be patient.
+%)
+<p >
+[Push the button below to create you database]
+%v{<br><blink><font color=red>[, and overwrite the previous database "%o" of the target directory]
+</font></blink>}:
+<p>
 <form method="post" action="%d">
 %h
 <dl><dt><dd>
-<input type="submit" value="Ok" />
-<input type="submit" name="cancel" value="[cancel]" />
+<input type="submit" value="Ok">
+<input type="submit" name="cancel" value="[cancel]">
 </dl>
 </form>
-
-<p />
-
-[
-de: Zu deiner Information: Diese Funktion entspricht der Ausführung
-    der folgenden Kommandos:
-en: For information, this operation corresponds to the following commands:
-es: Por información, esta operación corresponde a los comandos 
-    siguientes: 
-fi: Tiedoksi, tämä toiminto vastaa seuraavia komentoja:
-fr: Pour information, cette opération correspond à la suite
-    des commandes suivantes:
-it: Per informazione, questa operazione corrisponde ai seguenti comandi:
-lv: Informâcijai: Ðî darbîba atbilst sekojoðâm komandâm:
-sv: Denna operation motsvarar de följande kommandona:
-]
-
+<p>
+[For information, this operation corresponds to the following commands][:]
 <pre>
      $ cd "%w"
      $ %x%/%d%p > comm.log
 </pre>
-
-[
-de: Hierbei wird ein Verzeichnis namens "%o.gwb" angelegt.
-en: This builds a directory named "%o.gwb".
-es: Esto creará una carpeta de nombre "%o.gwb".
-fi: Tämä luo hakemiston nimeltä "%o.gwb".
-fr: Cela fabriquera un répertoire de nom "%o.gwb".
-it: Verrà creata una directory chiamata "%o.gwb".
-lv: Tâs rezultâtâ tiks izveidots katalogs "%o.gwb".
-sv: Detta skapar en katalog benämnd "%o.gwb".
-]
-
+[This builds a directory named "%o.gwb".]
 </ul>
+</body>
+</html>
