--- a/bin/setup/lang/bso_log.htm
+++ b/bin/setup/lang/bso_log.htm
@@ -7,10 +7,8 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-en: Content of result file
-fr: Contenu du fichier résultat
-]</title>
+  <title>[Content of result file]
+</title>
 %fsetup.css;
 </head>
 
@@ -18,10 +16,7 @@ fr: Contenu du fichier résultat
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-en: Content of result file
-fr: Contenu du fichier résultat
-]
+[Content of result file]
 </h1>
 </div>
 
@@ -29,16 +24,7 @@ fr: Contenu du fichier résultat
 
 <dl><dt><dd>
 <pre>
-%H{- [
-de: empty file
-en: empty file
-es: fichero vacio
-fi: tyhjä tiedosto
-fr: fichier vide
-it: file vuoto
-lv: datne ir tukða
-sv: tom fil
-lv: datne ir tukða
-] -}
+%H{- [empty file]
+-}
 </pre>
 </dl>
