--- a/bin/setup/lang/cleanup1.htm
+++ b/bin/setup/lang/cleanup1.htm
@@ -7,129 +7,42 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Aufräumen - Phase 2
-en: Clean up - Phase 2
-es: Limpieza
-fi: Puhdistus - vaihe 2
-fr: Nettoyage
-it: Pulizia - fase 2
-lv: Sakopðana - 2. fâze
-sv: Rensa upp - fas 2
-]</title>
+  <title>[Cleanup - Phase 2]
+</title>
 %fsetup.css;
 </head>
 
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[
-de: Aufräumen
-en: Cleaning up
-es: Limpieza
-fi: Puhdistaminen
-fr: Nettoyage
-it: Pulizia
-lv: Sakopðana
-sv: Rensa upp
-]
-</h1>
+<h1 style="margin:0;">[Cleanup]</h1>
 </div>
-
-<p />
-
-[
-de: Wir fahren nun mit dem Aufräumen der Datenbank "%a" fort.
-en: We are going to proceed to the cleaning up of the database "%a".
-es: Vamos a proceder a la limpieza de la base  "%a".
-fi: Jatkamme tietokannan "%a" puhdistamista.
-fr: Nous allons procéder au nettoyage de la base "%a".
-it: Ora procediamo alla pulizia della base "%a".
-lv: Datu bâzes "%a" sakopðanas proces tiks turpinâts.
-sv: Vi ska gå vidare med att rensa upp databasen "%a".
-]
-
-<p />
-
-[
-de: Achtung: Diese Operation kann je nach Fall einige Sekunden oder
-    Minuten dauern. Bitte habe Geduld.
-en: Warning: this operation can take some seconds or minutes, depending on
-    the cases. Be patient.
-es: Atención: la operación puede tomar algunos segundos 
-    o algunos minutos, según el caso. Tenga paciencia.
-fi: Varoitus: tämä toiminto kestää hetken. Odota rauhallisesti.
-fr: Attention : l’opération peut prendre quelques secondes ou
-    quelques minutes, suivant les cas. Soyez patient.
-it: Attenzione: l'operazione può prendere qualche secondo o
-    quanche minuto, a seconda dei casi. Siate pazienti.
-lv: Brîdinâjums: tas var ilgt no daþâm sekundçm lîdz pat daþâm minûtçm,
-    atkarîbâ no apstâkïiem. Lûdzu pacietîbu.
-sv: Varning: denna operation kan ta några sekunder eller minuter, beroende på
-    fallet. Ha tålamod.
-]
-
-<p />
-
-[
-de: Drücke den Knopf, um die Operation zu starten.
-en: Push the button below to start the operation.
-es: Apoye en el botón siguiente para lanzar la operación.
-fi: Paina nappia alla aloittaaksesi toiminnon.
-fr: Appuyez sur le bouton ci-dessous pour lancer l’opération.
-it: Cliccate sul bottone qui sotto per lanciare l'operazione.
-lv: Darbîbas uzsâkðanai nospiediet sekojoðo podziòu.
-sv: Tryck på knappen nedan för att starta operationen.
-]
-
-<p />
-
+<p>
+[We are going to proceed to the cleaning up of the database "%a".]
+<p>
+[Warning: this operation can take some seconds or minutes, depending on the cases. Be patient.]
+<p>
+[Push this button to start][:]
+<p>
 <form method="post" action="cleanup_1">
 %h
 <dl><dt><dd><input type="submit" value="Ok" /></dl>
 </form>
-
-<p />
-
-[
-de: Zu deiner Information: Diese Funktion entspricht der Ausführung
-    der folgenden Kommandos:
-en: For information, this operation corresponds to the following commands:
-es: Por información, esta operación corresponde a la
-    ejecuci&oacuten de los comandos siguientes:
-fi: Toiminto koostuu seuraavista komennoista:
-fr: Pour information, cette opération correspond à la suite
-    des opérations suivantes:
-it: A titolo d'informazione, questa operazione corrisponde ai
-    seguenti comandi:
-lv: Inormâcijai: Ðî darbîba atbilst sekojoðâm komandâm:
-sv: Denna operation motsvarar de följande kommandona:
-]
-
+<p>
+[For information, this operation corresponds to the following commands][:]
 <pre>
      $ cd "%w"
      $ %x%/gwu %a -o tmp.gw
      $ mkdir old
-     [
-de: Unter Unix:
-en: Under Unix:
-fi: Unixissa:
-fr: Sous Unix :
-it: Sotto Unix:
-]
+     [Under Unix][:]
         $ rm -rf old/%a.gwb
         $ mv %a.gwb old/.
-     [
-de: Unter MSdos:
-en: Under MSdos:
-fi: MS-DOS:ssa:
-fr: Sous MSdos :
-it: Sotto MSdos
-]
+     [Under MSdos][:]
         $ del old\%a.gwb\*.*
         $ rmdir old\%a.gwb
         $ move %a.gwb old\.
      $ %x%/gwc tmp.gw -nofail -o %a > comm.log
 </pre>
+</body>
+</html>
 
