--- a/bin/setup/lang/err_acc.htm
+++ b/bin/setup/lang/err_acc.htm
@@ -7,72 +7,18 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Zugriff verboten
-en: Forbidden access
-es: Acceso Prohibido
-fi: Pääsy evätty
-fr: Accès interdit
-it: Accesso vietato
-lv: Pieja liegta
-sv: Förbjuden åtkomst
-]</title>
+  <title>[Forbidden access]
+</title>
 %fsetup.css;
 </head>
 
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-<font color="red">[
-de: Zugriff verboten
-en: Forbidden access
-es: Acceso prohibido
-fi: Pääsy evätty
-fr: Accès interdit
-it: Accesso vietato
-lv: Pieja liegta
-sv: Förbjuden åtkomst
-]</font></h1>
+<h1 style="margin:0;"><font color="red">[Forbidden access]</font></h1>
 </div>
-
-[
-de: Du bist nicht berechtigt, diesen Dienst zu nutzen. Nur die 
-    Adresse "%o" darf ihn verwenden.
-en: You are not allowed to access this service. Only the address "%o" can
-    use it.
-es: Ud no esta autorizado a entrar en este servicio.
-    Solo la dirección "%o" puede utilizarla.
-fi: Sinulla ei ole oikeuksia käyttää tätä palvelua. Vain osoitteella "%o" on
-    lupa käyttää sitä.
-fr: <p>
-    Vous n’avez pas l’autorisation d’accéder à ce
-    service. Seule l’adresse "%o" peut l’utiliser.
-it: Non avete l'autorizzazione di accedere a questo
-    servizio. Solo l'indirizzo "%o" può farlo.
-lv: Jums ir liegta pieeja ðim servisam. Tikai no adreses "%o" var
-    lietot ðo servisu. 
-sv: Du har inte tillåtelse att komma åt denna service. Bara adressen "%o" kan
-    göra det.
-]
-
-<p />
-
-[
-de: Um dies zu ändern, bearbeite die Datei "%y" und ändere die
-    Zeile, in der "<tt>%o</tt>" steht in "<tt>%a</tt>".
-en: To change that, edit the file named "%y" and change the line holding:
-    "<tt>%o</tt>" into "<tt>%a</tt>".
-es: Para sobrepasar esta prohibición, edite Ud el fichero
-    "%y" y remplace la linea que contiene "<tt>%o</tt>" por "<tt>%a</tt>".
-fi: Muuttaaksesi asetukset, muokkaa tiedostoa "%y" GeneWebin asennus-
-    hakemistossa ja muuta rivi "<tt>%o</tt>" seuraavanlaiseksi "<tt>%a</tt>".
-fr: Pour outrepasser cet interdit, il faut éditer le fichier
-    "%y" et remplacer la ligne contenant "<tt>%o</tt>" en "<tt>%a</tt>".
-it: Per aggirare questo divieto, bisogna editare il file
-    "%y" e sostituire la linea contenente "<tt>%o</tt>" en "<tt>%a</tt>".
-lv: Pieejas iegûðanai jârediìç fails "%y" lînijâ, kas
-    satur: "<tt>%o</tt>" jâieraksta "<tt>%a</tt>".
-sv: För att ändra det, editera filen "%y" och ändra raden som
-    innehåller: "<tt>%o</tt>" till "<tt>%a</tt>".
-]
+[You are not allowed to access this service. Only the address "%o" can use it.]
+<p>
+[To change that, edit the file named "%y" and change the line holding: "<tt>%o</tt>" into "<tt>%a</tt>".]
+</body>
+</html>
