--- a/bin/setup/lang/err_smdr.htm
+++ b/bin/setup/lang/err_smdr.htm
@@ -7,7 +7,8 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[error]</title>
+  <title>[error]
+</title>
 %fsetup.css;
 </head>
 
@@ -16,24 +17,7 @@
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;"><font color="red">[error]</font></h1>
 </div>
-
-<br /><p />
-
-[
-de: Du hast das gleiche Verzeichnis gewählt wie das dieser
-    <font color=#2f6400><b>GeneWeb</b></font>-Installation.
-en: You selected the same directory than the one of this
-    <font color=#2f6400><b>GeneWeb</b></font> distribution.
-es: Ud. ha seleccionado la misma carpeta que la de esta
-    distribución de <font color=#2f6400><b>GeneWeb</b></font>.
-fi: Valitsit saman hakemiston missä
-    <font color=#2f6400><b>GeneWeb</b></font> on. 
-fr: Vous avez sélectionné le même répertoire que
-    celui de cette distribution de <b><font color=#2f6400>GeneWeb</font></b>.
-it: Avete selezionato la stessa directory della distribuzione
-    <b><font color=#2f6400>GeneWeb</font></b>.
-lv: Jûs esiet izvçlçjies vienu no <font color=#2f6400><b>GeneWeb</b></font>
-    programmas katalogiem.
-sv: Du valde samma katalog som denna <font color=#2f6400><b>GeneWeb</b></font>
-    distribution.
-]
+<p>
+[You selected the same directory than the one of this %G distribution.]
+</body>
+</html>
