--- a/bin/setup/lang/gwdiff.htm
+++ b/bin/setup/lang/gwdiff.htm
@@ -7,92 +7,49 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-en: Compute the difference between two bases
-fr: Détection des différences entre deux bases
-]</title>
+  <title>[Compute the difference between two bases]
+</title>
 %fsetup.css;
 </head>
 
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[
-en: Compute the difference between two bases
-fr: Détection des différences entre deux bases
-]
-</h1>
+<h1 style="margin:0;">[Compute the difference between two bases]</h1>
 </div>
-
 <form method=GET action="gwdiff">
 <input type=hidden name=opt value="check">
 <input type=hidden name=lang value="%l">
-
 <table>
 <tr>
 <td>
 <ul><li>
-[
-en: Select your first database:
-fr: Sélectionnez la première base de données :
-]
-
+[Select your first database][:]
 <p>
 <table class="setup">
 %b{<tr align=left>
 <td><input type=radio name=anon1 value="%a">   </td>
 <td>%a</td></tr>|
-<tr align=left><td>- [
-de: keine Datenbank vorhanden
-en: there is no database at present
-es: actualmente ninguna base de datos existe
-fr: il n’y a aucune base de données actuellement
-it: attualmente non esiste nessuna base di dati
-lv: nav nevienas datu bâzes
-sv: det finns ingen databas för tillfället
-]</tr></td>}
+<tr align=left><td>- [there is no database at present]
+</tr></td>}
 </table>
 <p>
 <table class="setup">
-<tr align=left><td> </td><td colspan=3>[
-en: Starting person in first base.<br>
-    <span style="color:#FF0000;">Mandatory parameter</span>
-fr: Personne racine dans la première base.<br>
-    <span style="color:#FF0000;">Paramètre obligatoire</span>
-]</td></tr>
-
-<tr align=left><td>[
-de: Vorname
-en: First name
-es: Nombre
-fr: Prénom
-it: Nome
-lv: Vârds
-sv: Förnamn
-]</td>
+<tr align=left><td> </td><td colspan=3>[Starting person in first base.<br> <span style="color:#FF0000;">Mandatory parameter</span>]
+%(
+Starting person in first base.<br> <span style="color:#FF0000;">Mandatory parame
+ter</span>
+%)
+</td></tr>
+<tr align=left><td>[First name]
+</td>
 <td><input name="a1" size=30 maxlength=200></td>
-
-<td>[
-de: Nr
-en: Num
-es: Núm
-fr: Num
-it: Numero
-lv: Num
-sv: Nummer
-]</td>
+<td>[Num]
+</td>
 <td><input name="a2" size=5 maxlength=8></td></tr>
 
-<tr align=left><td>[
-de: Nachname
-en: Surname
-es: Apellido
-fr: Nom
-it: Cognome
-lv: Uzvârds
-sv: Efternamn
-]</td>
+<tr align=left><td>[Surname]
+</td>
 <td colspan=3><input name="a3" size=40 maxlength=200></td></tr>
 </table>
 </ul>
@@ -100,10 +57,7 @@ sv: Efternamn
 <td>&nbsp;&nbsp;&nbsp;</td>
 <td>
 <ul><li>
-[
-en: Select your second database:
-fr: Sélectionnez la seconde base de données :
-]
+[Select your second database][:]
 <p>
 <table class="setup">
 %b{<tr align=left>
@@ -113,44 +67,17 @@ fr: Sélectionnez la seconde base de données :
 </table>
 <p>
 <table class="setup">
-<tr align=left><td> </td><td colspan=3>[
-en: Starting person in second base.<br>
-    <span style="color:#FF0000;">Mandatory parameter</span>
-fr: Personne racine dans la seconde base.<br>
-    <span style="color:#FF0000;">Paramètre obligatoire</span>
-]</td></tr>
-
-<tr align=left><td>[
-de: Vorname
-en: First name
-es: Nombre
-fr: Prénom
-it: Nome
-lv: Vârds
-sv: Förnamn
-]</td>
+<tr align=left><td> </td><td colspan=3>
+[Starting person in second base.<br> <span style="color:#FF0000;">Mandatory parameter</span>]
+</td></tr>
+<tr align=left><td>[First name]
+</td>
 <td><input name="b1" size=30 maxlength=200></td>
-
-<td>[
-de: Nr
-en: Num
-es: Núm
-fr: Num
-it: Num
-lv: Num
-sv: Nummer
-]</td>
+<td>[Num]
+</td>
 <td><input name="b2" size=5 maxlength=8></td></tr>
-
-<tr align=left><td>[
-de: Nachname
-en: Surname
-es: Apellido
-fr: Nom
-it: Cognome
-lv: Uzvârds
-sv: Efternamn
-]</td>
+<tr align=left><td>[Surname]
+</td>
 <td colspan=3><input name="b3" size=40 maxlength=200></td></tr>
 </table>
 </ul>
@@ -159,84 +86,42 @@ sv: Efternamn
 </table>
 <p>
 <li>
-[
-de: Wähle die gewünschten Optionen:
-en: Select the options you want:
-es: Seleccione las opciones que Ud. desee:
-fr: Sélectionnez les options que vous désirez :
-it: Selezionate le opzioni desiderate:
-lv: Iezîmçjiet atbilstoðos datnes izveides parametrus:
-sv: Välj de optioner du vill ha:
-]
+[Select the options you want][:]
 <p>
 <dl><dt><dd><table class="setup">
 <tr align=left>
 <td><input type=checkbox name=ad value="on">-ad &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td>[
-en: Checks descendants of all ascendants .
-fr: Vérifier tous les descendants des ascendants.
-]</td>
+<td>[Checks descendants of all ascendants.]
+</td>
 </tr>
 </table></dl>
-
 <dl><dt><dd><table class="setup">
 <tr align=left>
 <td><input type=checkbox name=d value="on">-d &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td>[
-en: Checks descendants (default).
-fr: Vérifier les descendants (par défaut).
-]</td>
+<td>[Checks descendants (default).]
+</td>
 </tr>
 </table></dl>
-
 <dl><dt><dd><table class="setup">
 <tr align=left>
 <td><input type=checkbox name=mem value="on">-mem &nbsp;</td>
-<td>[
-de: Während der Operation sparsam mit dem Speicher umgehen
-    (ist aber langsamer).
-en: Save memory space during operation (but it will be slower).
-es: Economizar el espacio memoria durante la operación
-    (pero esta será mas lenta).
-fr: Économiser l’espace mémoire pendant l’opération
-    (mais ce sera plus lent).
-it: Economizzare lo spazio-memoria durante l'operazione
-    (che però sarà più lenta).
-lv: Taupît operatîvo atmiòu (process notiks lçnâk).
-sv: Spara minne under operationen (men det kommer att gå saktare).
-]</td>
+<td>[Save memory space during operation (but it will be slower).]
+</td>
 </tr>
 </table></dl>
-
 <!--
 <p>
 <dl><dt><dd><table class="setup">
 <tr align="left">
 <td>
 <label for="o">-o&nbsp;
-<input type="input" name="o" size="20" maxlength="50" style="padding-left:4px"></label>&nbsp;&nbsp;[
-en: Output results to this file.
-fr: Rediriger les résultats vers ce fichier.
-]</td>
+<input type="input" name="o" size="20" maxlength="50" style="padding-left:4px"></label>&nbsp;&nbsp;[Output results to this file.]
+</td>
 </tr>
 </table></dl>-->
 <p>
 <li>
-[
-de: Dann drücke diesen Knopf:
-en: Then push this button:
-es: Apoye luego en este botón:
-fr: Puis appuyez sur ce bouton :
-it: Poi cliccate su questo bottone:
-lv: Beigâs nospiediet ðo podziòu:
-sv: Tryck sedan på denna knapp:
-]
-
-<p>
-<input type=submit value="[
-[
-en: Compare
-fr: Comparer
-]">
+[Then click on this button][:]
+<input type=submit value="[Compare]">
 </ul>
 </form>
