--- a/bin/setup/lang/gwdiff_ok.htm
+++ b/bin/setup/lang/gwdiff_ok.htm
@@ -7,53 +7,22 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-en: Differences computed
-fr: Différence calculée
-]</title>
+  <title>[Differences computed]
+</title>
 %fsetup.css;
 </head>
 
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[
-en: Differences computed
-fr: Différence calculée
-]
-</h1>
+<h1 style="margin:0;">[Differences computed]</h1>
 </div>
-
-<p />
-[
-en: Done. The operation is terminated.
-fr: L’opération est terminée.
-]
-
-<p />
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: You can also return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
-    menu</a>.
-es: Ud puede también regresar al <a
-    href="gwsetup?lang=%l;v=welcome.htm">menú principal</a>.
-fi: Tai voit palata <a href="gwsetup?lang=%l;v=welcome.htm">päävalikkoon</a>.
-fr: Vous pouvez aussi revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: Potete anche tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Jûs variet arî atgriezties <a
-    href="gwsetup?lang=%l;v=welcome.htm">galvenajâ izvçlnç </a>.
-sv: Du kan också återvända till <a
-    href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
-
-<br /><p />
-
-[
-en: Click <a href="gwsetup?lang=%l;v=bso_comm.htm">here</a> for the results in "comm.log":
-fr: Cliquer <a href="gwsetup?lang=%l;v=bso_comm.htm">ici</a> pour les résultats dans "comm.log".
-]
-
-<p />
+<p>
+[Done. The operation is terminated.]
+<p>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+<p>
+[Read the alert messages in the file "comm.log"]
+(<a href="gwsetup?lang=%l;v=bso_comm.htm">comm.log</a>
+</body>
+</html>
