--- a/bin/setup/lang/save.htm
+++ b/bin/setup/lang/save.htm
@@ -7,15 +7,8 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Sichern und restaurieren
-en: Save and Restore
-es: Copia de Seguridad y Restauración
-fr: Sauvegarde et Restauration
-it: Copia di sicurezza e ripristino dati
-lv: Saglabâðana un atjaunoðana
-sv: Spara och återskapa
-]</title>
+  <title>[Save and Restore]
+</title>
 %fsetup.css;
 </head>
 
@@ -24,89 +17,23 @@ sv: Spara och återskapa
 <div style="background:url('images/gwlogo.png') no-repeat left top;
   text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Sichern und restaurieren
-en: Save and Restore
-es: Copia de Seguridad y Restauración
-fr: Sauvegarde et restauration
-it: Copia di sicurezza e ripristino dati
-lv: Saglabâðana un atjaunoðana
-sv: Spara och återskapa
-]
+[Save and Restore]
 </h1>
 </div>
 
 <br><p>
 
-[
-de: Um deine Datenbank zu sichern, verwende die
-    <a href="gwsetup?lang=%l;v=gwu.htm">Extraktion einer 
-    GeneWeb-Quelldatei</a>.
-    Dann kopiere die so erhaltene Datei irgendwo anders auf die Platte,
-    oder, noch besser, auf ein externes Medium.
-en: To save your database, apply the
-    <a href="gwsetup?lang=%l;v=gwu.htm">extraction of a GeneWeb source
-    file</a>. Then copy the obtained file elsewhere in the disk, or
-    better, on an external support.
-es: Para efectuar una copia de seguridad de su base de datos, aplique Ud.
-    <a href="gwsetup?lang=%l;v=gwu.htm">la extracción de un fichero fuente
-    GeneWeb</a>. Copie luego el fichero asi obtenido en alguna otra parte del
-    disco duro, o mucho mejor en un soporte externo.
-fr: Pour sauvegarder votre base de données, appliquez
-    <a href="gwsetup?lang=%l;v=gwu.htm">l’extraction d’un fichier source
-    GeneWeb</a>. Puis copiez le fichier ainsi obtenu autre part sur
-    le disque, ou mieux, sur un support externe.
-it: Per effettuare una copia di sicurezza della vostra base procedete
-    <a href="gwsetup?lang=%l;v=gwu.htm"> l'estrazione di un file sorgente
-    GeneWeb</a>. Poi copiate il file così ottenuto altrove sul
-    disco, o meglio, su un supporto esterno.
-lv: Lai saglabâtu datu bâzi, <a href="gwsetup?lang=%l;v=gwu.htm">izveidojiet
-    GeneWeb datni</a>. Tad to iekopçjiet droðâ vietâ.
-sv: För att spara din databas, använd
-    <a href="gwsetup?lang=%l;v=gwu.htm">exportera en GeneWeb källfil</a>.
-    Kopiera sedan den skapade filen någon annanstans på hårddisken,
-    eller bättre, till en annat media.
-] (gwu)
+[To save your database, apply the extraction of a GeneWeb source file. Then copy the obtained file elsewhere in the disk, or better, on an external support.]
+%(
+[To save your database, apply the extraction of a GeneWeb source file.
+Then copy the obtained file elsewhere in the disk, or better, on an external support.]
+%)
+(<a href="gwsetup?lang=%l;v=gwu.htm">gwu</a>)
+<p>
+
+[To restore a gw database, apply the creation from a GeneWeb source file.]
+(<a href="gwsetup?lang=%l;v=gwc.htm">gwc</a>)
 
 <p>
 
-[
-de: Um eine gw Datenbank zu restaurieren, verwende die Funktion
-    <a href="gwsetup?lang=%l;v=gwc.htm">Datenbank aus GeneWeb-Quelldatei 
-    erzeugen</a>.
-en: To restore a gw database, apply the
-    <a href="gwsetup?lang=%l;v=gwc.htm">creation from a GeneWeb source file</a>.
-es: Para restaurar una gw base de datos, aplique Ud.
-    <a href="gwsetup?lang=%l;v=gwc.htm">la creación a partir de
-    un fichero fuente GeneWeb</a>.
-fr: Pour restaurer une base de donnée au format gw appliquez
-    <a href="gwsetup?lang=%l;v=gwc.htm">la création à partir
-    d’un fichier source GeneWeb</a>.
-it: Per ripristinare il contenuto di una gw base di dati effettuate
-    <a href="gwsetup?lang=%l;v=gwc.htm">una creazione partendo
-    da un file sorgente GeneWeb</a>.
-lv: Lai atjaunotu datu bâzi, izmantojiet
-    <a href="gwsetup?lang=%l;v=gwc.htm">datu bâzes izveidoðanu no GeneWeb
-    datnes</a>.
-sv: För att återskapa en databas, använd
-    <a href="gwsetup?lang=%l;v=gwc.htm">importera en GeneWeb källfil</a>.
-] (gwc)
-
-<p>
-
-[
-de: Zurück zum
-    <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: You can return to the
-    <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
-es: Ud. puede regresar al <a href="gwsetup?lang=%l;v=welcome.htm">menú
-    principal</a>.
-fr: Vous pouvez revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: Potete tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Jûs variet atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ
-    izvçlnç</a>.
-sv: Du kan återvända till
-    <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
